# TrustLayer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Hackathon-brief-research.md  Hackathon-brief.md  README.md  README_CONVERSATION.md  compose.yaml  doc_2026-06-20_03-29-13.env  foundry.toml  ideas.md  p2p-insurance-x402-research.md  pyproject.toml  requirements-conversation.txt  streamlit_app.py
.github/workflows/: deploy-main.yml
KB/: flight_attributes.md
app/: __init__.py  streamlit_app.py  voice_embed.html
backend/: __init__.py  agent.py  betty_voice_routes.py  main.py  schemas.py  tools.py
backend/services/: __init__.py  base_sepolia.py  blockscout_activity.py  chain.py  circle_wallet.py  circle_x402.py  elevenlabs_voice.py  internal_auth.py  oracle.py  pricing.py  receipts.py  session_mode.py
contracts/: InsuranceManager.sol  __init__.py  insurance_manager_client.py
coverpilot_conversation/: __init__.py  agent.py  chat_llm.py  customer_directory.py  kb_policy_research.py  message_extract.py  mock_backend.py  prompts.py  tools.py  trip_intake_gap.py
scripts/: deploy_insurance_manager.py
test/: InsuranceManager.t.sol
tests/: conftest.py
tests/agent/: test_broker_boundary.py
tests/api/: test_api_routes.py
tests/contract/: test_contract_compile.py
tests/e2e/: test_demo_paths.py
tests/manual/: README.md  demo-transcript.md  evidence-bundle-template.json  evidence-bundle.json  fallback-demo-bundle.json  followup-commit-proof.md  live-demo-transcript.md  trustlayer-runbook-contract.md  trustlayer-voice-evidence-bundle.json  trustlayer-voice-transcript.md
tests/manual/receipts/: payment-2026-06-20T01-25-48-798Z.json  payment-2026-06-20T01-30-44-712Z.json  payment-2026-06-20T01-31-09-575Z.json
tests/observability/: test_route_logs.py
tests/security/: test_privilege_and_redaction.py
tests/unit/: test_betty_voice_routes.py  test_blockscout_activity.py  test_chat_llm.py  test_circle_wallet.py  test_elevenlabs_voice.py  test_message_extract.py  test_policy_research.py  test_pricing.py  test_purchase_payment.py  test_stack_contract.py  test_trip_intake_gap.py
trustlayer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
trustlayer_coverpilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
